--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,27 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+.pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
 dist
 dist-ssr
 *.local
+
+# TS
+*.tsbuildinfo
+
+# Turbo
+.turbo
+
+stats.*
+
+# Test
+coverage/
+
+# ESLint
+.eslintcache
 
 # Editor directories and files
 .vscode/*
