--- a/package.json
+++ b/package.json
@@ -13,25 +13,38 @@
     "@tanstack/react-query": "^5.59.20",
     "axios": "^1.7.7",
     "lucide-react": "^0.344.0",
+    "million": "3.1.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.14.0",
+    "@biomejs/biome": "1.9.4",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@commitlint/types": "^19.5.0",
+    "@types/node": "^22.8.5",
+    "@types/react-helmet": "^6.1.11",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.14.0",
-    "eslint-plugin-react-hooks": "5.1.0-rc-fb9a90fa48-20240614",
-    "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "rollup-plugin-visualizer": "^5.12.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.14.0",
-    "vite": "^5.4.11"
-  }
+    "vite": "^5.4.11",
+    "vite-plugin-checker": "^0.8.0",
+    "vite-plugin-pwa": "^0.20.5",
+    "vite-tsconfig-paths": "^5.0.1"
+  }, 
+  "engines": {
+    "node": ">=20.14.x",
+    "pnpm": ">=9"
+  },
+  "packageManager": "pnpm@9.1.1"
 }
