Refatora importações, ajusta formatação e adiciona README com instruções de instalação

--- a/biome.json
+++ b/biome.json
@@ -50,7 +50,12 @@
         "useFilenamingConvention": {
           "level": "error",
           "options": {
-            "filenameCases": ["PascalCase", "kebab-case", "snake_case", "camelCase"]
+            "filenameCases": [
+              "PascalCase",
+              "kebab-case",
+              "snake_case",
+              "camelCase"
+            ]
           }
         }
       },
