--- a/package.json
+++ b/package.json
@@ -45,14 +45,13 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.14.0",
     "vite": "^5.4.11",
     "vite-plugin-checker": "^0.8.0",
     "vite-plugin-pwa": "^0.20.5",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "engines": {
-    "node": ">=20.14.x",
+    "node": ">=20",
     "pnpm": ">=9"
   },
   "packageManager": "pnpm@9.1.1"
