--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -18,6 +18,12 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - uses: pnpm/action-setup@v4
+      name: Install pnpm
+      with:
+        version: 9
+        run_install: false
+
     - name: Set up Node.js
       uses: actions/setup-node@v4
       with:
