--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "push-release": "git push --follow-tags origin main"
   },
   "dependencies": {
+    "@million/lint": "^1.0.12",
     "@tanstack/react-query": "^5.59.20",
     "axios": "^1.7.7",
     "lucide-react": "^0.344.0",
-    "million": "3.1.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
@@ -34,15 +34,15 @@
     "@commitlint/config-conventional": "^19.5.0",
     "@commitlint/types": "^19.5.0",
     "@types/node": "^22.8.5",
-    "@types/react-helmet": "^6.1.11",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-helmet": "^6.1.11",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
-    "rollup-plugin-visualizer": "^5.12.0",
     "postcss": "^8.4.49",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3",
     "vite": "^5.4.11",
